# OpenAI_Rust_Assistant

./: .env  Cargo.toml  README.md
src/: functions_ai.rs  functions_other.rs  main.rs  openai_api_data.rs
