[package]
name = "openai_assistant_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0.114"
crossterm = "0.27.0"  


